--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -40,6 +40,7 @@
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Kevin Dugan</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>Staging Version</li>
 					</ul>
 				</div>
 			</footer>
