Updating professional experience with Woolpert

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,6 +17,11 @@
 	<h2>Professional Experience</h2>
 	<div class="row">
 		<article class="col-6 col-12-xsmall work-item">
+			<a href="{{url_for('experience_zoom')}}?job=woolpert" data-poptrox="iframe,600x400" class="image fit thumb"><img src="{{url_for('static', filename='images/woolpert-logo.png')}}" alt=""/></a>
+			<h3>Software Engineer</h3>
+			<h5>Woolpert</h5>
+		</article>
+		<article class="col-6 col-12-xsmall work-item">
 			<a href="{{url_for('experience_zoom')}}?job=xom" data-poptrox="iframe,600x400" class="image fit thumb"><img src="{{url_for('static', filename='images/xom-logo.png')}}" alt="" /></a>
 			<h3>Scientific Software Developer</h3>
 			<h5>ExxonMobil</h5>
